# alexgetman.com

./: .dockerignore  .gitignore  AGENTS.md  NOTES.md  README.md  astro.config.ts  biome.json  knip.json  lefthook.yml  package.json  plans.md  pnpm-lock.yaml  pnpm-workspace.yaml  project-map.mmd  studio.video-only.example.yaml  studio.yaml  svelte.config.js  tsconfig.base.json  tsconfig.json
apps/posting/: .dockerignore  .gitignore  README.md  ai-seo-plan.md  brand-ecosystem.md  compose.yaml  pyproject.toml
apps/posting/docs/: content-media-guidelines.md  media-test-matrix.md  operations.md
apps/posting/posting/: Dockerfile  app.py  capability_matrix.py  control_plane.py  controller_bot.py  crosspost_worker.py  pipeline_metrics.py
apps/posting/posting_core/: __init__.py  content.py  db.py  db_migrations.py  http_client.py  media.py  metrics_config.py  ops_lookup.py  paths.py  publications.py  publish_config.py  publishing.py  queue.py  queue_jobs.py  queue_state.py  repair.py  repair_repository.py  repair_social.py  scheduling.py  schema.py  social_urls.py  state.py  targets.py  text.py  time_utils.py  verify.py  worker_runner.py
apps/posting/scripts/: backup-db  check  check-secrets  deploy  health-check  init-fixture-db  postingctl  restore-db  smoke  update-secrets
apps/posting/site-feed/: Dockerfile  collector.py  fastapi_app.py  ialexey-feed.env.example
apps/posting/site_feed/: Dockerfile  __init__.py  app_lifecycle.py  auth.py  bot_source.py  command_actions.py  command_center_charts.py  command_center_ui.py  config.py  dashboard_routes.py  feed_store.py  (+11 more)
(+728 files in other folders)
